<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@drawable/rectangle2"
    android:layout_marginBottom="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/imgCard"
        android:layout_width="120dp"
        android:layout_height="120dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="0dp">

        <ImageView
            android:id="@+id/tvShelterPhoto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            tools:src="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvShelterName"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/imgCard"
        android:ellipsize="end"
        android:fontFamily="@font/andika"
        android:maxLines="1"
        android:text="@string/nameShelter"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvShelterCity"
        style="@style/textRingan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvShelterName"
        android:layout_toRightOf="@+id/imgCard"
        android:text="@string/cityShelter" />

    <TextView
        android:id="@+id/tvBuka"
        style="@style/textRingan"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvShelterCity"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/imgCard"
        android:text="@string/buka" />

    <TextView
        android:id="@+id/tvOpenHoursShelter"
        style="@style/textRingan"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvBuka"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@id/imgCard"
        android:text="@string/openHoursShelter" />

    <TextView
        android:id="@+id/tvTutup"
        style="@style/textRingan"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvShelterCity"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="12dp"
        android:layout_toRightOf="@id/tvBuka"
        android:text="@string/tutup" />

    <TextView
        android:id="@+id/tvCloseHoursShelter"
        style="@style/textRingan"
        android:layout_width="55dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvTutup"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:layout_toRightOf="@id/tvOpenHoursShelter"
        android:text="@string/closeHoursShelter" />




</RelativeLayout>