<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkBlue"
    tools:context=".ShelterDetails">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkBlue"
        android:padding="16dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/imgCardDetail"
            android:layout_width="270dp"
            android:layout_height="270dp"
            app:cardElevation="0dp"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="10dp">
            <ImageView
                android:id="@+id/tvShelterPhotoDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:src="@tools:sample/avatars"
                android:scaleType="fitXY"
                />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/shelterNameDetail"
            style="@style/textDetail"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgCardDetail"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="18dp"
            android:gravity="center"
            android:text="@string/Shelterocation"
            android:textSize="29sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shelterAddressDetail"
            style="@style/textDetail"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/shelterNameDetail"
            android:layout_centerHorizontal="true"
            android:text="@string/addressShelter" />

        <LinearLayout
            android:id="@+id/mid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/shelterAddressDetail"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/phone"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/shelterPhoneDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phoneShelter"
                    style="@style/textDetail"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:src="@drawable/ic_baseline_location_city_24"
                    android:layout_marginLeft="16dp"/>
                <TextView
                    android:id="@+id/shelterCityDetail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cityShelter"
                    style="@style/textDetail"
                    android:layout_marginLeft="8dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/mid2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/mid"
            android:layout_marginTop="16dp"
            android:weightSum="1">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardOpen"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    app:cardCornerRadius="6dp"
                    android:background="@color/white"
                    app:cardElevation="1dp">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/jam_buka"
                        android:backgroundTint="@color/iconColor"
                        android:background="@drawable/rectangle3"/>

                    <TextView
                        android:id="@+id/shelterOpenHoursDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/openHoursShelter"
                        style="@style/textDetail"
                        android:layout_marginTop="32dp"
                        android:textColor="@color/darkBlue"
                        android:textStyle="bold"
                        android:layout_gravity="center_horizontal"/>

                    <TextView
                        android:id="@+id/jamBuka"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jamBuka"
                        style="@style/textDetail"
                        android:layout_marginTop="52dp"
                        android:textColor="@color/darkBlue"
                        android:layout_gravity="center_horizontal"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:gravity="center">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardClose"
                    android:layout_width="80dp"
                    android:layout_height="90dp"
                    app:cardCornerRadius="6dp"
                    android:background="@color/white"
                    app:cardElevation="1dp">
                    <ImageView
                        android:layout_width="35dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/jam_tutup"
                        android:backgroundTint="@color/iconColor"
                        android:background="@drawable/rectangle3"/>

                    <TextView
                        android:id="@+id/shelterCloseHoursDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/closeHoursShelter"
                        style="@style/textDetail"
                        android:layout_marginTop="32dp"
                        android:textColor="@color/darkBlue"
                        android:layout_gravity="center_horizontal"
                        android:textStyle="bold"/>

                    <TextView
                        android:id="@+id/jamTutup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/jamTutup"
                        style="@style/textDetail"
                        android:layout_marginTop="52dp"
                        android:textColor="@color/darkBlue"
                        android:layout_gravity="center_horizontal"/>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/mid3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/mid2"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle3"
                android:text="@string/share"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/shelterMaps"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle3"
                android:text="@string/buka_di_google_maps"
                app:backgroundTint="@null" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/mid4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/mid3"
            android:layout_marginTop="16dp"
            android:weightSum="1">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="center">

            <Button
                android:id="@+id/shelterDonation"
                android:layout_width="389dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:background="@drawable/rectangle3"
                android:text="@string/donation"
                app:backgroundTint="@null" />

        </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>